--- a/Web-app/aichatbot/src/App.css
+++ b/Web-app/aichatbot/src/App.css
@@ -70,6 +70,7 @@ form button {
   background-color: rgb(56, 56, 143);
 }
 
+
 input {
   line-height: 1.5;
   width: 100%;
@@ -98,6 +99,7 @@ button:disabled {
   cursor: not-allowed;
 }
 
+
 .sign-in {
   color: #282c34;
   background: white;
@@ -105,8 +107,10 @@ button:disabled {
   margin: 0 auto;
 }
 
-ul,
-li {
+
+
+
+ul, li {
   text-align: left;
   list-style: none;
 }
@@ -126,6 +130,7 @@ p {
   display: flex;
   align-items: center;
 }
+
 
 .sent {
   flex-direction: row-reverse;
@@ -147,3 +152,4 @@ img {
   border-radius: 50%;
   margin: 2px 5px;
 }
+
